# implicit-likelihood-ratio-transformer

./: README.md  implicit_lrt_reasoning.ipynb  pyproject.toml
analysis_out/: final_train_val_acc_ci95.csv
checkpoints/task_A_OOD/: ICLTransformer_seed0.pt  ICLTransformer_seed1.pt  ICLTransformer_seed2.pt
checkpoints/task_A_ablation_context_increase/: ICLTransformer_seed0.pt  ICLTransformer_seed1.pt  ICLTransformer_seed2.pt
checkpoints/task_A_ablation_frozen_attention/: ICLTransformerFrozenAttention_seed0.pt  ICLTransformerFrozenAttention_seed1.pt  ICLTransformerFrozenAttention_seed2.pt
checkpoints/task_A_ablation_frozen_pos/: ICLTransformerFrozenPos_seed0.pt  ICLTransformerFrozenPos_seed1.pt  ICLTransformerFrozenPos_seed2.pt
checkpoints/task_A_ablation_frozen_qk/: ICLTransformerFrozenQK_seed0.pt  ICLTransformerFrozenQK_seed1.pt  ICLTransformerFrozenQK_seed2.pt
checkpoints/task_A_ablation_interleaved/: ICLTransformerInterleavedEmbeddings_seed0.pt  ICLTransformerInterleavedEmbeddings_seed1.pt  ICLTransformerInterleavedEmbeddings_seed2.pt
checkpoints/task_A_ablation_no_labels/: ICLTransformerNoLabels_seed0.pt  ICLTransformerNoLabels_seed1.pt  ICLTransformerNoLabels_seed2.pt
checkpoints/task_A_ablation_no_pos/: ICLTransformerNoPos_seed0.pt  ICLTransformerNoPos_seed1.pt  ICLTransformerNoPos_seed2.pt
checkpoints/task_A_ablation_noisy_labels_p0.1/: ICLTransformerNoisyLabels_seed0.pt  ICLTransformerNoisyLabels_seed1.pt  ICLTransformerNoisyLabels_seed2.pt
checkpoints/task_A_ablation_noisy_labels_p0.2/: ICLTransformerNoisyLabels_seed0.pt  (+2 more)
(+29 files in other folders)
