[project]
name = "implicit-likelihood-ratio-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandoc>=2.4",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
]
